создает отзывы и добивает оформ заказа

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
 
   web:
     image: nginx
-    restart: always
+    restart: unless-stopped
     ports:
       - 8181:80
     volumes:
@@ -14,14 +14,14 @@ services:
 
   php-fpm:
     build: .
-    restart: always
+    restart: unless-stopped
     volumes:
       - .:/var/www/html
       - ./docker/php/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-xdebug.ini
 
   db:
     image: postgres:14.1
-    restart: always
+    restart: unless-stopped
     ports:
       - 54323:5432
     environment:
